apps/base/supernote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-supernote
  labels:
    trust.cert-manager.io/inject-bundle: "true"
