apps/base/supernote/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: supernote-public
  namespace: app-supernote
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`supernote.decentm.com`)
      kind: Rule
      services:
        - name: supernote
          port: http
